--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,8 +3,9 @@ repo_url: "https://github.com/Placeholder-Software/wetsurfacedecals"
 repo_name: "Issue Tracker"
 site_favicon: "wetstuff.png"
 google_analytics: ["UA-46722926-4", "wetsurfacedecals.readthedocs.io"]
-theme: readthedocs
-theme_dir: theme
+theme:
+  name: readthedocs
+  custom_dir: theme
 copyright: "<a href='https://placeholder-software.co.uk/wetstuff/'>Placeholder Software</a>"
 pages:
 - Home: "index.md"
