--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,10 +10,14 @@ pages:
     - "Quick Start": "GettingStarted/QuickStart.md"
     - "Basic Wet Decal": "GettingStarted/WetDecal.md"
     - "Particle Splatter Wet Decals": "GettingStarted/WetParticleSplatter.md"
+- "Demo Scenes":
+    - "1. Basic Puddle": "Demo Scenes/Puddle.md"
+    - "2. Drying With Timeline": "Demo Scenes/Drying.md"
+    - "3. Rain": "Demo Scenes/Rain.md"
+    - "4. Particles (Fast Splat)": "Demo Scenes/Particles1.md"
+    - "5. Particles (Continuous Drip)": "Demo Scenes/Particles2.md"
 - "Tutorials":
     - "Levels Visualizer": "Tutorials/LevelsVisualizer.md"
-    - "Puddles": "Tutorials/PuddlesPrefab.md"
-    - "Rain": "Tutorials/RainPrefab.md"
     - "Timeline": "Tutorials/Timeline.md"
 - "Advanced":
     - "The Rendering Pipeline": "Advanced/RenderingPipeline.md"
