Referencing `WetStuff` instead of `WetSurfaceDecals`

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,6 @@
 site_name: "Wet Stuff"
 repo_url: "https://github.com/Placeholder-Software/wetsurfacedecals"
 repo_name: "Issue Tracker"
-site_favicon: "wetstuff.png"
 google_analytics: ["UA-46722926-4", "wetsurfacedecals.readthedocs.io"]
 copyright: "<a href='https://placeholder-software.co.uk/wetstuff/'>Placeholder Software</a>"
 pages:
@@ -26,7 +25,7 @@ pages:
     - "ParticleWetSplatterTemplate": "Reference/ParticleWetSplatterTemplate.md"
     - "WetDecal": "Reference/WetDecal.md"
     - "Levels Visualizer": "Reference/LevelsVisualizer.md"
-    - "WetSurfaceDecals": "Reference/WetSurfaceDecals.md"
+    - "WetStuff": "Reference/WetStuff.md"
     #- "Shaders":
     #    - "WetSurfaceCore": "Reference/Shaders/WetSurfaceCore.md"
     #    - "WetSurfaceMask": "Reference/Shaders/WetSurfaceMask.md"
