Added a page on compatibility

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,6 +11,7 @@ pages:
     - "Basic Wet Decal": "GettingStarted/WetDecal.md"
     - "Particle Splatter Wet Decals": "GettingStarted/WetParticleSplatter.md"
     - "Weather Integration": "GettingStarted/WeatherIntegration.md"
+    - "Compatibility": "GettingStarted/Compatibility.md"
 - "Demo Scene Breakdown":
     - "1. Basic Puddle": "Demo Scenes/Puddle.md"
     - "2. Drying With Timeline": "Demo Scenes/Drying.md"
